--- a/pumba/static/base.html
+++ b/pumba/static/base.html
@@ -1,10 +1,13 @@
 <html>
     <head>
+        {% load static %}
         <title>Pumba!</title>
+        <script src="{% static 'jquery-3.3.1.min.js' %}"></script>
+        <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
     </head>
     <body>
         <div class="header">
-            <h1>Pumba!</h1>
+            <h1><img src="{% static 'logo.png' %}"/></h1>
         </div>
         <div class="content">
                 {% block content %}
