--- a/game/static/game/game.html
+++ b/game/static/game/game.html
@@ -44,7 +44,7 @@
 
     // Websocket al servidor
     var gameSocket = new WebSocket(
-        'ws://' + window.location.host +
+        'ws://' + window.location.hostname +
         '/ws/game/' + roomName + '/');
 
     // Procesamiento a hacer cuando se recibe un mensaje
