--- a/game/static/game/game.html
+++ b/game/static/game/game.html
@@ -50,7 +50,7 @@
         '/ws/game/' + roomName + '/');
     } catch (error) {
         gameSocket = new WebSocket(
-        'ws://' + "https://pumba-game.herokuapp.com" +
+        'wss://' + "https://pumba-game.herokuapp.com" +
         '/ws/game/' + roomName + '/');
     }
     
