--- a/game/static/game/game.html
+++ b/game/static/game/game.html
@@ -51,7 +51,7 @@
         '/ws/game/' + roomName + '/');
     } catch (error) {
         gameSocket = new WebSocket(
-        ws_scheme + "https://pumba-game.herokuapp.com" +
+        ws_scheme + "://pumba-game.herokuapp.com" +
         '/ws/game/' + roomName + '/');
     }
     
