--- a/game/static/game/game.html
+++ b/game/static/game/game.html
@@ -102,7 +102,7 @@
                         cbox_message = "Player " + action['player'] + " draws a card."
                         break;
                     case "draw_card_forced":
-                        cbox_message = "Player " + action['player'] + " draws " + action['number'] + " cards and ends their turn."
+                        cbox_message = "Player " + action['player'] + " draws " + action['number'] + " cards and resets the counter."
                         break;
                     case "play_card":
                         cbox_message = "Player " + action['player'] + " plays a " + action['card']['number'] + " of " + action['card']['suit'] + "."
