Marcador de puntos

--- a/game/static/game/game.html
+++ b/game/static/game/game.html
@@ -151,7 +151,7 @@
                 if (player[2]){
                     playerconstatus = "AI"
                 }
-                li.innerHTML = player[0] + " | " + player[1] + " cards" + " | " + playerconstatus
+                li.innerHTML = player[0] + " | " + player[1] + " cards" + " | " + playerconstatus + " | " + player[3] + " points"
             })
 
             // Coge el div para mostrar la mano
